--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,11 @@ jobs:
       run: sudo apt update && sudo apt install -y python3 python3-pip lcov curl && pip install conan
 
     - name: Configure Conan
-      run: conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default && conan profile update settings.build_type=$BUILD_TYPE default
+      run: conan profile new default --detect &&
+           conan profile update settings.compiler.libcxx=libstdc++11 default &&
+           conan profile update settings.build_type=$BUILD_TYPE default &&
+           conan remote add kie-kies https://conan.cloudsmith.io/kie/kies/
+
 
     - name: Install Dependency
       working-directory: ${{github.workspace}}/build
