--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,7 @@
-add_executable(redis_test redis_test.cpp)
-target_link_libraries(redis_test PUBLIC reddish_hermit)
-target_compile_options(redis_test PUBLIC -fsanitize=address -g --coverage -Wall -Wextra -Werror)
-target_link_options(redis_test PUBLIC -fsanitize=address --coverage)
-add_test(redis_test redis_test)
+find_package(GTest REQUIRED)
+
+add_executable(proto_test proto_test.cpp)
+target_link_libraries(proto_test PUBLIC reddish_hermit gtest::gtest)
+target_compile_options(proto_test PUBLIC -fsanitize=address -g --coverage -Wall -Wextra -Werror)
+target_link_options(proto_test PUBLIC -fsanitize=address --coverage)
+add_test(proto_test proto_test)
