[MODIFY] use Boost.Outcome as error handling and embed timer into connection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,9 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "typeindex": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "csetjmp": "cpp",
+        "strstream": "cpp",
+        "cfenv": "cpp"
     }
 }
