[ADD] change name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 aux_source_directory(. SRC)
-aux_source_directory(proto PROTO)
+aux_source_directory(resp RESP)
 aux_source_directory(utils UTILS)
 aux_source_directory(network NETWORK)
-target_sources(reddish_hermit PRIVATE ${SRC} ${PROTO} ${UTILS} ${NETWORK})
+target_sources(reddish_hermit PRIVATE ${SRC} ${RESP} ${UTILS} ${NETWORK})
