[ADD] add Result class and related utilities

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,3 +12,10 @@ target_link_libraries(connection_test PUBLIC reddish_hermit gtest::gtest)
 target_compile_options(connection_test PUBLIC -fsanitize=address -g --coverage -Wall -Wextra -Werror)
 target_link_options(connection_test PUBLIC -fsanitize=address --coverage)
 add_test(connection_test connection_test)
+
+
+add_executable(utils_test utils_test.cpp)
+target_link_libraries(utils_test PUBLIC reddish_hermit gtest::gtest)
+target_compile_options(utils_test PUBLIC -fsanitize=address -g --coverage -Wall -Wextra -Werror)
+target_link_options(utils_test PUBLIC -fsanitize=address --coverage)
+add_test(utils_test utils_test)
