[ADD] adapt to Conan 2.0 and remove kie_toolbox for now because cloudsmith doesn't support revisions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ project(reddish_hermit CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(kie_toolbox REQUIRED)
+find_package(Boost REQUIRED)
 
 add_library(reddish_hermit)
 add_subdirectory(src)
 target_include_directories(reddish_hermit PUBLIC include)
-target_link_libraries(reddish_hermit PUBLIC kie_toolbox::kie_toolbox)
+target_link_libraries(reddish_hermit PUBLIC boost::boost)
 
 
 option(ENABLE_TEST "if enable test for reddish_hermit" ON)
