--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,14 +22,14 @@ jobs:
     - name: Configure and build
       working-directory: ${{github.workspace}}
       shell: bash
-      run: chmod 777 ./script/build.sh && ./script/build.sh $GITHUB_WORKSPACE $BUILD_TYPE
+      run: chmod 777 ./script/build.sh && ./script/build.sh $BUILD_TYPE
 
     - name: Test
-      working-directory: ${{github.workspace}}/build
+      working-directory: ${{github.workspace}}
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
+      run: ctest --preset conan-debug
 
     - name: Lcov
       working-directory:  ${{github.workspace}}/build
