--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,16 @@
 find_package(GTest REQUIRED)
 
-add_executable(resp_test resp_test.cpp)
-target_link_libraries(resp_test PUBLIC reddish_hermit gtest::gtest)
-target_compile_options(resp_test PUBLIC -fsanitize=address -g --coverage -Wall -Wextra -Werror)
-target_link_options(resp_test PUBLIC -fsanitize=address --coverage)
-add_test(resp_test resp_test)
+add_executable(request_test request_test.cpp)
+target_link_libraries(request_test PUBLIC reddish_hermit gtest::gtest)
+target_compile_options(request_test PUBLIC -fsanitize=address -g --coverage -Wall -Wextra -Werror)
+target_link_options(request_test PUBLIC -fsanitize=address --coverage)
+add_test(request_test request_test)
+
+add_executable(response_test response_test.cpp)
+target_link_libraries(response_test PUBLIC reddish_hermit gtest::gtest)
+target_compile_options(response_test PUBLIC -fsanitize=address -g --coverage -Wall -Wextra -Werror)
+target_link_options(response_test PUBLIC -fsanitize=address --coverage)
+add_test(response_test response_test)
 
 
 add_executable(connection_test connection_test.cpp)
