--- a/client/src/CMakeLists.txt
+++ b/client/src/CMakeLists.txt
@@ -2,4 +2,4 @@ aux_source_directory(. SRC)
 aux_source_directory(resp RESP)
 aux_source_directory(utils UTILS)
 aux_source_directory(network NETWORK)
-target_sources(reddish_hermit PRIVATE ${SRC} ${RESP} ${UTILS} ${NETWORK})
+target_sources(reddish_hermit_client PRIVATE ${SRC} ${RESP} ${UTILS} ${NETWORK})
