--- a/doxygen.conf
+++ b/doxygen.conf
@@ -44,7 +44,7 @@ PROJECT_NUMBER         =
 # for a project that appears at the top of each page and should give viewer a
 # quick idea about the purpose of the project. Keep the description short.
 
-PROJECT_BRIEF          = "A redis client powered by Boost.ASIO"
+PROJECT_BRIEF          = "A kv database powered by Boost.ASIO"
 
 # With the PROJECT_LOGO tag one can specify a logo or an icon that is included
 # in the documentation. The maximum height of the logo should not exceed 55
