--- a/client/src/CMakeLists.txt
+++ b/client/src/CMakeLists.txt
@@ -1,5 +1,2 @@
 aux_source_directory(. SRC)
-aux_source_directory(resp RESP)
-aux_source_directory(utils UTILS)
-aux_source_directory(network NETWORK)
-target_sources(reddish_hermit_client PRIVATE ${SRC} ${RESP} ${UTILS} ${NETWORK})
+target_sources(reddish_hermit_client PRIVATE ${SRC})
