--- a/common/src/CMakeLists.txt
+++ b/common/src/CMakeLists.txt
@@ -1,3 +1,6 @@
+aux_source_directory(command COMMAND)
+aux_source_directory(connection CONNECTION)
 aux_source_directory(protocol PROTOCOL)
+aux_source_directory(utils UTILS)
 
-target_sources(reddish_hermit_common PRIVATE ${PROTOCOL})
+target_sources(reddish_hermit_common PRIVATE ${COMMAND} ${PROTOCOL} ${CONNECTION} ${UTILS})
